Feature/focus slides (#86)
Implemented, reviewed, and edited focus slides for all presentations.

Co-authored-by: Claire Carroll <claire@fishtownanalytics.com>
Co-authored-by: Jeremy Cohen <jeremy@fishtownanalytics.com>

--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -1,6 +1,11 @@
 ---
 layout: presentation
 title: Data Warehouses
+learningObjectives:
+  - Explain the difference between a transactional and analytical database
+  - Explain the key features of a modern data warehouse
+  - Explain which data warehouses are best in class and why
+  - Explain use cases for a Data Lake technology
 ---
 
 class: title, center, middle
@@ -32,14 +37,7 @@ Learning about your data warehouse is a surefire way to
 
 ---
 
-class: focus
-
-# Data warehouses - Focus
-
-- What is a Data Warehouse?
-- Transactional vs. Analytical databases
-- The Modern Data Warehouse
-- Features of Data Warehouses
+{% include options/focus_slide.html %}
 
 ---
 
