--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -4,6 +4,12 @@ title: Docs
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
+learningObjectives:
+  - Explain how to add descriptions to models and sources
+  - Configure doc blocks
+  - Generate and view documentation in dbt Cloud and the command line
+  - Build intuition for the value of documenting your dbt project
+  
 ---
 
 class: title, center, middle
@@ -27,6 +33,10 @@ _If you don't know, now you know._
 
 class: subtitle, middle, center
 ## _How is knowledge documented and maintained at your company?_
+
+---
+
+{% include options/focus_slide.html %}
 
 ---
 
