--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -4,9 +4,19 @@ title: Testing & CI
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
+learningObjectives:
+  - Explain the role of tests in an analytics workflow
+  - Add tests to your models
+  - Run tests on your models
+  - Build intuition for why tests fail and what to test
+  
 ---
 class: title, center, middle
 # Testing & CI
+---
+
+{% include options/focus_slide.html %}
+
 ---
 
 # Refresher:
@@ -15,7 +25,6 @@ class: title, center, middle
 _**Analytics code should have quality assurance**_
 * _Run automated tests on source data and on transformed data to ensure that SQL works as intended_
 * _Ensure source data is up to date_
-
 
 ---
 # Refresher:
