dbt project design/trimmed the first half and polished the rest of the slides

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -5,7 +5,6 @@ estimated_teaching_time: 60
 teaching_method: slides
 working_session: false
 learningObjectives:
-  - Differentiate between data organization and data transformation
   - Name the three main interfaces for a dbt project
   - Build intuition for naming conventions for database objects
   - Build intuition for how to use dbt and BI tools together
@@ -40,260 +39,6 @@ With dbt!
 ---
 
 {% include options/focus_slide.html %}
-
----
-
-# Begging two questions
-
-**What is the final data artifact that I’m trying to share with a stakeholder?**
-- Also called "data model design," "data warehouse design," or "warehousing"
-- It's a careful balance between several trade-offs: technological limitations, stakeholder needs, correctness vs. complexity, flexibility vs. rigidity
-- Hard to have generic answers! Could fill a book (or several). It's a fascinating topic that we'll cover _very_ briefly
-
---
-
-**How can I execute the _creation_ of that final artifact?**
-- With dbt!
-- The _real_ interest of this presentation
-
-.caption[[Unrelated](https://en.wikipedia.org/wiki/Begging_the_question)]
----
-
-# You may have heard of:
-
-- Dimensional modeling _(Kimball 1996)_
-- Agile / BEAM (Business Event Analysis & Modelling) _(Corr 2011)_
-- Data Vault
-- Data normalization
-- Snowflake / star schema
-- Data "marts"
-
----
-
-# Our take
-
-Any set of best practices in model design have always needed to balance between
-two competing interests:
-
-- **Intuition:** speed of comprehension for human analysts
-
-- **Performance:** speed of operation for (non-human) database
-
-As modern data practitioners, we are inheritors of a decades-long history. It
-is our task to determine for the present day which concepts are still necessary, and which
-implementation strategies are still applicable.
-
----
-
-# Back in the nineties (aughts)
-
-.left-column-33[
-- Database technology privileges **highly normalized star schemas.**
-- Data Engineers expect to build them.
-- Data Analysts expect to query them.
-- These two groups don't have much else in common.
-]
-
-.right-column-66[
-<img src="/ui/img{{page.id}}/fact-dims.png" class="img-center">
-]
-
----
-
-# What's changed?
-
-.left-column[
-## Then
-- Data Engineers own ETL (“Extract-Transform-Load”)
-- Storage and aggregations are expensive
-- Joins are cheap
-- Datasets are federated between dozens/hundreds of objects
-]
-
-.right-column[
-## Now
-- Off-the-shelf tools (e.g. Stitch, Fivetran) can manage >90% of extract + load
-- Storage and aggregations are cheap
-- Joins are expensive
-- Massive datasets are updated in batches and queried in partitions
-]
-
----
-
-# I've got email!
-
-```
-Dear Analyst,
-
-I would like to know how many widgets we sold in 1997 (last year).
-
-Just widgets in our TV category, that is.
-
-Oh, and if you could slice that number by the brand name of the widget, and 
-dice it by the country where we sold them, that'd be rad.
-
-Thanks!
-
-Tristan
-SVP Marketing Analytics
-```
-
----
-
-# I'm thinking of a model...
-
-.left-column[
-Kimball says:
-1. What is the business process?
-2. What is the grain (primary key)?
-3. What are the "nouns" (dimensions)?
-4. What are the "verbs" (facts)?
-]
-
-.right-column[
-Corr says: 7Ws
-- **w**ho
-- **w**hat
-- **w**hen
-- **w**here
-- ho**w** many
-- **w**hy
-- ho**w**
-]
-
-???
-- The core concepts for human intuition are the same!
-- The specific implementation strategies are different.
-
----
-
-### Before: snowflake schema (ca. 2000s)
-
-<img src="/ui/img{{page.id}}/fact-sales-erd.png" class="img-center">
-
----
-
-### Before: snowflake schema (ca. 2000s)
-
-```sql
-SELECT
-	B.Brand,
-	G.Country,
-	SUM(F.Units_Sold)
-FROM Fact_Sales F
-INNER JOIN Dim_Date D             ON F.Date_Id = D.Id
-INNER JOIN Dim_Store S            ON F.Store_Id = S.Id
-INNER JOIN Dim_Geography G        ON S.Geography_Id = G.Id
-INNER JOIN Dim_Product P          ON F.Product_Id = P.Id
-INNER JOIN Dim_Brand B            ON P.Brand_Id = B.Id
-INNER JOIN Dim_Product_Category C ON P.Product_Category_Id = C.Id
-WHERE
-	D.Year = 1997 AND
-	C.Product_Category = 'tv'
-GROUP BY
-	B.Brand,
-	G.Country
-```
-
----
-
-### After: denormalized model (2020)
-
-.denser-text[
-
-| sale_date | units_sold | store_id | store_number | state_province | country | ean_code      | product_name | brand_name   | product_category_name |
-|-----------|------------|----------|--------------|----------------|---------|---------------|--------------|--------------|-----------------------|
-|1997-01-01 | 7          | 1234     | 12           | PA             | US      | 901234-123457 | Widget       | Widgetastic  | tv                    |
-|1997-01-02 | 8          | 1234     | 12           | MA             | US      | 901234-123457 | Widget       | Widgetastic  | tv                    |
-|1997-01-03 | 9          | 1234     | 12           | NSW            | AU      | 901234-123457 | Widget       | Widgetastic  | tv                    |
-
-]
-
----
-
-### After: denormalized model (2020)
-
-<img src="/ui/img{{page.id}}/fact-sales-dag.png" class="img-center">
-
----
-
-### After: denormalized model (2020)
-
-```sql
-select
-
-	brand,
-	country,
-	sum(units_sold) as total
-
-from analytics.fact_sales
-where date_trunc('year', sale_date) = '1997-01-01'
-  and product_category = 'tv'
-
-group by 1,2
-```
-
----
-
-# _ad hoc_ or _agile_ analytics
-
-.denser-text[
-
-.left-column[
-### Given
-
-- The technology we use is _powerful_. This isn't Kimball's database.
-- Designing and naming things for human intuition is _hard_. You won't get
-it right the first time, every time.
-- You're building a data product; you're not a data service provider. 
-Your goal should be to power reports that can be self-service.
-]
-
-.right-column[
-### Therefore
-
-- Build the data models you need, when you need them.
-- Think about the same things as always:
-	1. Business meaning
-	2. Nomenclature
-	3. Primary key
-- Write all data transformation in SQL.
-- Build with layers of abstraction so that you can make changes later.
-]
-]
-
----
-
-# Do you have to listen to us?
-
-No!
-
-If you want to build a snowflake schema or Data Vault 2.0 using dbt, 
-you totally can. It's all just SQL.
-
-Remember our two questions:
-
-1. What is the final data artifact that I’m trying to share with a stakeholder?
-2. How can I execute the _creation_ of that final artifact?
-
-If you have a good answer to question 2, it's okay if your answer to question 1 
-isn't _100% perfect_ or needs to change over time.
-
----
-
-class: subtitle
-
-# Checkpoint:
-
-- My manager is committed to a snowflake schema for your organizing our data, can I still use dbt?
-
---
-
-- Why is that the case?
-
---
-
-## Questions??
 
 ---
 
@@ -476,6 +221,20 @@ be grouped together in all three interfaces.
 
 ---
 
+class: subtitle
+
+# Checkpoint:
+
+- What are some helpful actions to do in the staging layer?  Why?
+- For those who have worked with dim/fct tables, how do you think about the differences that is helpful?
+Note: These can be a bit blurry if you are learning them for the first time.
+
+--
+
+## Questions?
+
+---
+
 class: subtitle, center, middle
 # dbt + BI
 
@@ -581,7 +340,7 @@ group by 1,2
 
 # Who can write that SQL?
 
-<img src="/ui/img{{page.id}}/bi-logos.png" style="width: 40%;" class="img-center">
+<img src="/ui/img{{page.id}}/bi-logos-2.png" style="width: 40%;" class="img-center">
 ---
 
 class: subtitle, middle, center
@@ -669,13 +428,24 @@ I think about join "steps" as degrees of Kevin Bacon
 # YMMV!
 Take it in good health, and with many grains of salt.
 ---
+
+class: subtitle
+
+# Checkpoint:
+
+- What are the three interfaces into your dbt project?
+- What are some key distinctions between the dbt layer and BI layer that you want to keep in mind?
+- What naming conventions is your team already using?
+
+--
+
+## Questions?
+
+---
+
 class: subtitle
 
 # Knowledge check
-
-- There are many data modeling/warehousing schools of belief
-- Database technology has changed dramatically over the past decade
-- The _how_ of modeling is just as important as the _what_
 
 When creating a dbt project:
 - Stage your raw source data before transforming it
@@ -683,6 +453,6 @@ When creating a dbt project:
 - Think about how your models fit into the bigger picture:
 	- Graph
 	- Codebase
-	- Database
+	- Data Warehouse
 
 {% include options/last_slide.html %}
