Add agenda to norms

--- a/_lessons/distributed-norms.html
+++ b/_lessons/distributed-norms.html
@@ -49,6 +49,14 @@ During these two days, we want to introduce some norms so we can get the most ou
 
 ---
 
+# Agenda
+
+The lesson decks can be found at [learn.getdbt.com/lessons](https://learn.getdbt.com/lessons)
+
+We have organized the timing for our two days in a separate [agenda]({{ site.data.links.agenda }})
+
+---
+
 # Scope of Learning
 
 1. Software Engineering Principles
