Added link for where to follow releases

--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -42,6 +42,11 @@ require-dbt-version: [">=0.17.0", "<0.18.0"]
 .caption[
     [Source](https://github.com/fishtown-analytics/dbt-init/blob/master/starter-project/dbt_project.yml)
 ]
+
+Note: You can follow dbt releases on GitHub:
+
+[github.com/fishtown-analytics/dbt/releases](https://github.com/fishtown-analytics/dbt/releases)
+
 ???
 
 * `require-dbt-version`: will help ensure that everyone is using the same version of dbt, especially important for CLI users
