--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -226,8 +226,10 @@ class: subtitle
 # Checkpoint:
 
 - What are some helpful actions to do in the staging layer?  Why?
-- For those who have worked with dim/fct tables, how do you think about the differences that is helpful?
-Note: These can be a bit blurry if you are learning them for the first time.
+--
+
+- For those who have worked with dim/fct tables, how do you think about the differences?
+- Note: The difference can be a bit blurry if you are learning them for the first time.
 
 --
 
@@ -434,7 +436,11 @@ class: subtitle
 # Checkpoint:
 
 - What are the three interfaces into your dbt project?
+--
+
 - What are some key distinctions between the dbt layer and BI layer that you want to keep in mind?
+--
+
 - What naming conventions is your team already using?
 
 --
