Added checkpoint to dbtonic-jinja.html

--- a/_lessons/dbtonic-jinja.html
+++ b/_lessons/dbtonic-jinja.html
@@ -250,6 +250,19 @@ good.ok.
 ## You hate to see it
 * Models that are entirely macros: https://github.com/Datavault-UK/snowflakeDemo/blob/master/models/load/stage/v_stg_inventory.sql
 ---
+
+class: subtitle
+
+## Checkpoint
+
+- **Share Out:** After learning about macros, what are you excited to implement in your own dbt project?
+
+--
+
+## Questions
+
+---
+
 class: subtitle
 # Knowledge check
 You should be able to:
