Add checkpoint to packages.html

--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -188,6 +188,19 @@ dbt will use _your_ version! This means you can:
 [Learn more](https://discourse.getdbt.com/t/did-you-know-dbt-ships-with-its-own-project/764)
 ]
 ---
+
+## Checkpoint
+
+- **Share Out:** What ways can packages level up your analytics workflow at your organization?
+
+--
+
+## Questions??
+
+---
+
+class: subtitle
+
 # Knowledge check
 
 You should:
