--- a/_lessons/data-warehouses.html
+++ b/_lessons/data-warehouses.html
@@ -49,20 +49,9 @@ Learning about your data warehouse is a surefire way to
 
 ---
 
-# Structured Data
+# "Data" is just information, stored in files
 
-_ordines et columnae sumus._     - Horace, Ode 4.7
-
-&nbsp;
-
-| id | name    | favorite_color | is_creative |
-|----|---------|----------------|-------------|
-| 1  | Alice   | green          | false       |
-| 2  | Barbara | blue           | true        |
-
----
-
-# Storing Data
+## Does it matter how it's stored?
 
 ### CSV
 
@@ -81,7 +70,7 @@ id,name,favorite_color,is_creative
 
 ---
 
-# Storing Data
+## It matters a great deal
 
 ### Parquet
 
@@ -180,30 +169,114 @@ For instance:
 
 ---
 
-# What's in a name?
+# What about _for analytics_, though?
 
 .left-column[
-Transactional Database, a.k.a.:
-- Relational Database
-- RDMS or RDBMS
-- Rowise, Row-oriented, Row Store
-- OLTP
-- e.g. Postgres
+## Then (transactional databases)
+- Storage and aggregations are expensive
+- Joins are cheap
+- Datasets are best when federated between dozens/hundreds of objects
 ]
 
 .right-column[
-Analytic(al) Database, a.k.a.:
-- Data Warehouse
-- Columnar Database
-- Column-oriented, Column Store
-- OLAP
-- e.g. Redshift
+## Now (analytic databases)
+- Storage and aggregations are cheap
+- Joins are expensive
+- Massive datasets are updated in batches and queried in partitions
 ]
 
 ---
 
+# I've got email!
+
+```
+Dear Analyst,
+
+I would like to know how many widgets we sold in 1997 (last year).
+
+Just widgets in our TV category, that is.
+
+Oh, and if you could slice that number by the brand name of the widget, and 
+dice it by the country where we sold them, that'd be rad.
+
+Thanks!
+
+Tristan
+SVP Marketing Analytics
+```
+
+---
+
+### Before: snowflake schema (ca. 2000s)
+
+<img src="/ui/img{{page.id}}/fact-sales-erd.png" class="img-center">
+
+---
+
+### Before: snowflake schema (ca. 2000s)
+
+```sql
+SELECT
+	B.Brand,
+	G.Country,
+	SUM(F.Units_Sold)
+FROM Fact_Sales F
+INNER JOIN Dim_Date D             ON F.Date_Id = D.Id
+INNER JOIN Dim_Store S            ON F.Store_Id = S.Id
+INNER JOIN Dim_Geography G        ON S.Geography_Id = G.Id
+INNER JOIN Dim_Product P          ON F.Product_Id = P.Id
+INNER JOIN Dim_Brand B            ON P.Brand_Id = B.Id
+INNER JOIN Dim_Product_Category C ON P.Product_Category_Id = C.Id
+WHERE
+	D.Year = 1997 AND
+	C.Product_Category = 'tv'
+GROUP BY
+	B.Brand,
+	G.Country
+```
+
+---
+
+### After: denormalized model (2020)
+
+.denser-text[
+
+| sale_date | units_sold | store_id | store_number | state_province | country | ean_code      | product_name | brand_name   | product_category_name |
+|-----------|------------|----------|--------------|----------------|---------|---------------|--------------|--------------|-----------------------|
+|1997-01-01 | 7          | 1234     | 12           | PA             | US      | 901234-123457 | Widget       | Widgetastic  | tv                    |
+|1997-01-02 | 8          | 1234     | 12           | MA             | US      | 901234-123457 | Widget       | Widgetastic  | tv                    |
+|1997-01-03 | 9          | 1234     | 12           | NSW            | AU      | 901234-123457 | Widget       | Widgetastic  | tv                    |
+
+]
+
+---
+
+### After: denormalized model (2020)
+
+<img src="/ui/img{{page.id}}/fact-sales-dag.png" class="img-center">
+
+---
+
+### After: denormalized model (2020)
+
+```sql
+select
+
+	brand,
+	country,
+	sum(units_sold) as total
+
+from analytics.fact_sales
+where date_trunc('year', sale_date) = '1997-01-01'
+  and product_category = 'tv'
+
+group by 1,2
+```
+
+---
+
 .center[
-## Big Idea: Which one is right?
+## So: Transactional. Analytic. Which one is right?
 ]
 
 --
@@ -224,6 +297,45 @@ Analyze data with an analytical database
 
 ---
 
+# A modern approach
+
+1. Replicate data into a warehouse
+    - Transactional databases
+    - SaaS products
+    - Event tracking
+2. Query the data in the warehouse
+3. Be a cultural change agent for data in your organization
+4. Profit
+
+---
+
+# P.S. What's in a name?
+
+.left-column[
+Transactional Database, a.k.a.:
+- Relational Database
+- RDMS or RDBMS
+- Rowise, Row-oriented, Row Store
+- OLTP
+- e.g. Postgres
+]
+
+.right-column[
+Analytic(al) Database, a.k.a.:
+- Data Warehouse
+- Columnar Database
+- Column-oriented, Column Store
+- OLAP
+- e.g. Redshift
+]
+
+???
+- RDMS or RDBMS = Relational Database Management System
+- OLTP = Online Transactional Processing
+- OLAP = Online Analytical Processing
+
+---
+
 class: subtitle
 
 # Checkpoint:
@@ -240,36 +352,15 @@ What type of database should you use if...
 
 ???
 
-Test test test
-
----
-
-
-# A modern approach
-
-1. Replicate data into a warehouse
-    - Transactional databases
-    - SaaS products
-    - Event tracking
-2. Query the data in the warehouse
-3. Be a cultural change agent for data in your organization
-4. Profit
-
-???
-- RDMS or RDBMS = Relational Database Management System
-- OLTP = Online Transactional Processing
-- OLAP = Online Analytical Processing
-
 ---
 
 class: title, center, middle
 # Modern Data Warehouses
-### "You better shop around" - The Miracles
 
 ---
 
 name: big-q
-# Q: Why are data warehouses fast?
+# Q: What's _fast_ in a datawarehouse?
 
 ---
 
@@ -277,10 +368,10 @@ template: big-q
 name: first-a
 
 .left-column[
-### A: They're columnar.
+### A: "Analytical" queries
 
 This structure of data storage allows them to .highlight[**limit scanned data**]
-when executing an "analytical" query.
+when aggregating across a subset of columns.
 ]
 
 ---
@@ -289,7 +380,7 @@ template: first-a
 name: second-a
 
 .right-column[
-### A: They're scalable.
+### A: Massive + massively parallel
 
 Data warehouses can benefit from .highlight[**horizontal and vertical scaling**].
 - _horizontal = more computers_
@@ -378,6 +469,11 @@ class: subtitle
 --
 
 ## Questions?
+
+---
+
+class: subtitle, center, middle
+# Your data warehouse & you
 
 ---
 
@@ -495,7 +591,7 @@ It's what partners best with dbt!
 # Who is best in class?
 
 - Snowflake + BigQuery: data lakes posing as data warehouses
-- Redshift is playing catch-up with Spectrum + RA3 nodes
+- Redshift is catching up with Spectrum, Aqua, RA3 nodes
 
 ### What sets them apart?
 - Support for semi-structured data
@@ -503,6 +599,42 @@ It's what partners best with dbt!
 - Separation of compute + storage
 
 These are features that, five years ago, were only found in Spark.
+
+---
+
+class: subtitle
+
+# Checkpoint:
+
+- Who are the *big three* players in data warehousing?
+
+--
+
+- What data warehouse technologies are you using at your organization?
+
+---
+
+class: subtitle
+# Knowledge check
+
+You should understand:
+- The foundational differences between transactional and analytical databases
+
+You should be building intuition around:
+- Why certain queries/models build more slowly
+- Which dbt features depend on features of the underlying data warehouse
+- Which data warehouses are best-in-class and why
+- Why someone might opt for a Data Lake technology (e.g. Spark)
+
+## Questions??
+
+{% include options/last_slide.html %}
+
+---
+
+class: subtitle, center, middle
+# Appendix
+## The Big Three in 2020: how they stack up
 
 ---
 
@@ -591,33 +723,3 @@ What if you want it _now_?
     - E.g. test that `unique` failures are < 1% of all rows
 - Tables are "sharded" by a top-level identifier
     - region, account, client, etc.
-
----
-
-class: subtitle
-
-# Checkpoint:
-
-- Who are the *big three* players in data warehousing?
-
---
-
-- What data warehouse technologies are you using at your organization?
-
----
-
-class: subtitle
-# Knowledge check
-
-You should understand:
-- The foundational differences between transactional and analytical databases
-
-You should be building intuition around:
-- Why certain queries/models build more slowly
-- Which dbt features depend on features of the underlying data warehouse
-- Which data warehouses are best-in-class and why
-- Why someone might opt for a Data Lake technology (e.g. Spark)
-
-## Questions??
-
-{% include options/last_slide.html %}
