--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -43,7 +43,9 @@ require-dbt-version: [">=0.17.0", "<0.18.0"]
     [Source](https://github.com/fishtown-analytics/dbt-init/blob/master/starter-project/dbt_project.yml)
 ]
 
-Note: You can follow dbt releases on GitHub:
+Use this to frequently update your dbt version for your team.
+
+Note - You can follow dbt releases on GitHub:
 
 [github.com/fishtown-analytics/dbt/releases](https://github.com/fishtown-analytics/dbt/releases)
 
