--- a/_lessons/testing-ci.html
+++ b/_lessons/testing-ci.html
@@ -377,7 +377,7 @@ models:
     columns: 
       - name: payment_method
         tests:
-          - accepeted_values:
+          - accepted_values:
               values: ['credit_card', 'paypal', 'ach_transfer']
 ```
 ]
