IDE can generate docs now

--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -197,7 +197,17 @@ dbt docs serve
 ```
 
 ## dbt Cloud
-<img src="/ui/img{{page.id}}/job-config-gen-docs.png" style="width: 90%; float: left;">
+.left-column-33[
+Development:
+
+<img src="/ui/img{{page.id}}/ide-gen-docs.png" style="width: 80%; float: left;">
+]
+
+.right-column-66[
+Deployment:
+
+<img src="/ui/img{{page.id}}/job-config-gen-docs.png" style="width: 100%; float: left;">
+]
 
 ---
 
