--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -506,12 +506,11 @@ class: subtitle
 # Knowledge check
 
 When creating a dbt project:
-- Stage your raw source data before transforming it
-- Every model should have a primary key
-- Think about how your models fit into the bigger picture:
-	- Graph
-	- Codebase
-	- Data Warehouse
+- First decide on the final artifact, and then sketch out the process for modeling it.
+- Use the three interfaces to organize your models.
+- Stage your raw source data before transforming it.
+- Every model should have a primary key.
+- Decide as an organization how to keep your BI layer thin and flexible.
 
 {% include options/last_slide.html %}
 
